
** Drive changes
----------------

- Drive 9 can be emulated at hardware level.

- The 1571 double-side disk drive is emulated.

** SID changes
--------------

- Dag Lem's enhanched reSID engine is now part of VICE.

** Unix changes
---------------

- The "Custom" joystick mapping is now compatible with the German
  keyboard layout, and possibly other non-US layouts.

** Miscellaneous changes
------------------------

- It is now possible to save the emulator's state into a file, and
  load it back at any time.

* Changes in VICE 0.15.0
========================

** C64 changes
--------------

- A couple of little but annoying bugs in the VIC-II emulation have
  been fixed.

- CIAs have been sped up considerably in those cases where several
  consecutive underflows happen.

- Cartridge support has been added.

- "4064" and "SX" are now valid ROM patch IDs (the same as "100" and
  "67" respectively).

** C128 changes
---------------

- YES!  The one and only free C128 emulator (x128) is back into
  operation!  No VDC, though.  No, don't ask us to implement it
  because we are not going to.  But of course contributions are
  (still) welcome.

** VIC20 changes
----------------

- The VIA emulation is now cycle-exact.

- Autostart is now implemented and works as in the C64 emulator.

- Tape support has been added.

- Cartridge support has been added.

- The memory configurations can be added at runtime.

- The RESTORE key works correctly now.

** PET changes
--------------

- The VIA emulation is now cycle-exact.

- Autostart is now implemented and works as in the C64 emulator.

- Tape support has been added.

- Several PET models have been added.  Moreover, the model type can be
  changed at runtime, without leaving the emulator.

** 1541 changes
---------------

- The VIA emulation is now cycle-exact.

- Support for 40-track disk images has been added.

- Support for a new GCR-encoded ("G64") disk format has been added.
